# help-chat

./: .gitignore  README.md
help-chat-dotnet/: HelpChat.sln  README.md  Requirements.md
help-chat-dotnet/CoverageReport/: Summary.txt
help-chat-dotnet/HelpChat.Console/: HelpChat.Console.csproj  Program.cs  appsettings.json
help-chat-dotnet/HelpChat.Lib/: HelpChatLib.cs
help-chat-dotnet/HelpChat.Lib.Tests/: ExceptionTests.cs  HelpChat.Lib.Tests.csproj  HelpChatLibTests.cs
help-chat-dotnet/HelpChat.Lib/Exceptions/: ConfigurationException.cs  HelpChatException.cs  IndexingException.cs  LlmRequestException.cs  PythonInitializationException.cs
help-chat-python/: README.md  Requirements.md  pyproject.toml
help-chat-python/src/help_chat/: __init__.py  cli.py  debug_logger.py  doc_indexer.py  keyring.py  llm.py
help-chat-python/src/help_chat/_compat/: __init__.py  aifc.py  chunk.py
help-chat-python/tests/: __init__.py  conftest.py  test_cli.py  test_doc_indexer.py  test_keyring.py  test_llm.py
